@@ -1,0 +1,26 @@
+<%args>
+        $iface
+        $vlanid
+</%args>
+<%init>
+use EBox::Gettext;
+</%init>
+<div class="warning">
+<% __('The removal of the vlan interface will affect the configuration of one or more modules that use references to this network interface.') %>
+<br/>
+<br/>
+<% __('If you choose to continue, all modules that make use of this network interface will delete the relevant parts of their configuration. Choose "Cancel" if you are not sure about this.') %>
+</div>
+
+<p>
+<form action="Vlan" method="post">
+        <input type="hidden" name="del"    value="yes"/>
+        <input type="hidden" name="force"    value="yes"/>
+        <input type="hidden" name="ifname"    value="<% $iface %>"/>
+        <input type="hidden" name="vlanid"    value="<% $vlanid %>"/>
+        <input class="inputButton" type="submit" name="accept" 
+               value="<% __('Ok') %>"/>
+        <input class="inputButton" type="submit" name="cancel" 
+               value="<% __('Cancel') %>"/>
+</form>
+</p>
