@@ -1,5 +1,6 @@
 1.3.1
 	+ bugfix: do not use Net::DNS
+	+ bugfix: used vlan interface can be removed	
 1.3.0
 	+ bugfix: restart network interfaces properly
 1.2
